--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -4,7 +4,7 @@
 
 <h2 *ngIf="winner">Player {{ winner }} won the game.</h2>
 
-<main>
+<main *ngIf="!winner">
     <app-square
         *ngFor="let val of squares; let i = index"
         [value]="val"
